[package]
name = "substrate-stellar-sdk"
version = "0.2.4"
authors = ["Torsten Stüber <torsten@satoshipay.io>"]
edition = "2018"
license = "Apache-2.0"  
description = "A Substrate compatible SDK for Stellar"
repository = "https://github.com/pendulum-chain/substrate-stellar-sdk"
readme = "README.md"
keywords = ["substrate", "Stellar"]
exclude = ["autogenerator/*"]

[dependencies]
serde_json = { version = '1.0.64', default-features = false, features = ["alloc"], optional = true }
serde = { version = "1.0.136", default-features = false, features = ["derive", "alloc"], optional = true }
hex = { version = "0.4", default-features = false , features = ["alloc"]}
sp-std = { version = "5.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42" }
sp-runtime = { version = "7.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42", optional = true }
sp-io = { version = "7.0.0", git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.42", optional = true }
sodalite = { version = "0.4.0" }
sha2 = { default-features = false, version = "0.9.9" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
base64 = { default-features = false, version = "0.13.0" }
num-rational = {version = "0.4", default-features = false}


[features]
default = [ "offchain", "std" ]
all-types = []
offchain = [ "sp-runtime", "sp-io", "serde_json", "serde" ]
std = [
  "sp-runtime/std",
  "sp-std/std",
  "sp-io/std",
  "serde_json/std",
  "serde/std",
  "hex/std",
  "num-rational/std"
]
