[package]
name = "substrate-stellar-sdk"
version = "0.3.0"
authors = ["Torsten Stüber <torsten@satoshipay.io>"]
edition = "2018"
license = "Apache-2.0"  
description = "A Substrate compatible SDK for Stellar"
repository = "https://github.com/pendulum-chain/substrate-stellar-sdk"
readme = "README.md"
keywords = ["substrate", "Stellar"]
exclude = ["autogenerator/*"]

[dependencies]
serde_json = { version = '1.0.64', default-features = false, features = ["alloc"], optional = true }
serde = { version = "1.0.136", default-features = false, features = ["derive", "alloc"], optional = true }
hex = { version = "0.4", default-features = false , features = ["alloc"]}
sodalite = { version = "0.4.0" }
sha2 = { default-features = false, version = "0.10.8" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
base64 = { default-features = false, version = "0.13.0" }
num-rational = {version = "0.4", default-features = false}
scale-info = {version = "2.1.1", default-features = false, features = ["derive"]}

# Substrate
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false, optional = true }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false, optional = true }

[features]
default = [ "offchain", "std" ]
all-types = []
offchain = [ "sp-runtime", "sp-io", "serde_json", "serde" ]
std = [
  "sp-runtime/std",
  "sp-std/std",
  "sp-io/std",
  "serde_json/std",
  "serde/std",
  "scale-info/std",
  "hex/std",
  "num-rational/std"
]
