[package]
name = "substrate-stellar-sdk"
version = "0.3.0"
authors = ["Torsten Stüber <torsten@satoshipay.io>"]
edition = "2018"
license = "Apache-2.0"  
description = "A Substrate compatible SDK for Stellar"
repository = "https://github.com/pendulum-chain/substrate-stellar-sdk"
readme = "README.md"
keywords = ["substrate", "Stellar"]
exclude = ["autogenerator/*"]

[dependencies]
serde_json = { version = '1.0.111', default-features = false, features = ["alloc"], optional = true }
serde = { version = "1.0.195", default-features = false, features = ["derive", "alloc"], optional = true }
hex = { version = "0.4.3", default-features = false , features = ["alloc"]}
sodalite = { version = "0.4.0", default-features = false }
sha2 = { default-features = false, version = "0.10.8" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
base64 = { default-features = false, version = "0.13.1" }
num-rational = {version = "0.4", default-features = false}
scale-info = {version = "2.10.0", default-features = false, features = ["derive"]}

# Substrate
sp-std = {  git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0", default-features = false, optional = true }
sp-io = {  git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.6.0", default-features = false, optional = true }

[features]
default = [ "offchain", "std" ]
all-types = []
offchain = [ "serde", "serde_json", "sp-io", "sp-runtime" ]
std = [
	"base64/std",
	"hex/std",
	"num-rational/std",
	"scale-info/std",
	"serde/std",
	"serde_json/std",
	"sha2/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
